# langchainLearn

./: README.md  main.py  pyproject.toml
DOC/: 环境初始化.md
Test/: MiddleWare.ipynb  Model.ipynb  Tongyi.ipynb
