[project]
name = "langchainlearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.25.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.0",
    "notebook>=7.4.7",
]
